--- a/index.html
+++ b/index.html
@@ -13,9 +13,24 @@
 
 </head>
 <body>
-<section id="about"></section>
-<section id="schedule"></section>
-<section id="contacts"></section>
+<section id="about">
+    Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" была основана в 2008 году с целью развития, популяризации спорта, рукопашного боя и различных видов единоборств!
+    Миссия школы "БОЕВЫЕ ТРАДИЦИИ" -  оздоровления нации, приобщение  молодежи,  детей к здоровому способу жизни, воспитание волевых и сильных людей,
+    которые могут постоять за себя, свои семьи и свою родную землю.
+    Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" работает в развитии различных направлений рукопашного боя, таих как: армейский рукопашный бой, боевое самбо, греплинг, ММА.
+    Проводит обучение профиссиональным нвыкам сотрудников различных охранных агенств Украины.
+    Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" проводит тренировки пехотинцев воздушно морских сил США для посольства Соединенных Штатов Америки в Украине.
+</section>
+<section id="schedule">
+    Зал ул. Фрунзе,105 (стадион "Спартак"), Киев. Расписания занятий.
+    Зал ул. Здолбуновская 3А, Киев. Расписания занятий.
+</section>
+<section id="contacts">
+    В настоящее время Школа Рукопашного Боя "Боевые традиции" организует и проводит регулярные занятия по адресам:
+    г. Киев, ул. Фрунзе, 105 (стадион "Спартак").
+    г. Киев ул. Здолбуновская 3А (Харьковский жилой массив).
+    (093) 704-07-98.
+</section>
 
 </body>
 </html>
