--- a/index.html
+++ b/index.html
@@ -3,34 +3,159 @@
 <head>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="UTF-8">
-    <meta name="description" content="Beautiful Responsive Animated OnePage Template">
-    <meta name="keywords" content="Zerif, responsive, html, template, creative">
-    <meta name="author" content="Mizanur Rahman">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="">
+
+    <!------  CSS STYLES ----------->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/paper/bootstrap.min.css" rel="stylesheet">-->
 
     <title>Fight School</title>
 
 </head>
 <body>
-<section id="about">
-    Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" была основана в 2008 году с целью развития, популяризации спорта, рукопашного боя и различных видов единоборств!
-    Миссия школы "БОЕВЫЕ ТРАДИЦИИ" -  оздоровления нации, приобщение  молодежи,  детей к здоровому способу жизни, воспитание волевых и сильных людей,
-    которые могут постоять за себя, свои семьи и свою родную землю.
-    Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" работает в развитии различных направлений рукопашного боя, таих как: армейский рукопашный бой, боевое самбо, греплинг, ММА.
-    Проводит обучение профиссиональным нвыкам сотрудников различных охранных агенств Украины.
-    Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" проводит тренировки пехотинцев воздушно морских сил США для посольства Соединенных Штатов Америки в Украине.
-</section>
-<section id="schedule">
-    Зал ул. Фрунзе,105 (стадион "Спартак"), Киев. Расписания занятий.
-    Зал ул. Здолбуновская 3А, Киев. Расписания занятий.
-</section>
-<section id="contacts">
-    В настоящее время Школа Рукопашного Боя "Боевые традиции" организует и проводит регулярные занятия по адресам:
-    г. Киев, ул. Фрунзе, 105 (стадион "Спартак").
-    г. Киев ул. Здолбуновская 3А (Харьковский жилой массив).
-    (093) 704-07-98.
-</section>
+
+    <!------- NAVIGATION -------->
+    <header id="home" class="header">
+        <div id="main-nav" class="navbar navbar-inverse bs-docs-nav fixed" role="banner">
+            <div class="container">
+                <div class="navbar-header responsive-logo">
+                    <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <div class="navbar-brand">
+                        <img src="..." alt="...">
+                    </div>
+                </div>
+                <nav class="navbar-collapse collapse" role="navigation" id="bs-navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right responsive-nav main-nav-list">
+                        <li><a href="#home">Home</a></li>
+                        <li class=""><a href="#about">О нас</a></li>
+                        <li class=""><a href="#gallery">Фото</a></li>
+                        <li class=""><a href="#schedule">Расписание</a></li>
+                        <li class=""><a href="#contacts">Контакты</a></li>
+                        <!--<li class="current"><a href="#aboutus">About Us</a></li>-->
+                        <!--<li class=""><a href="#team">Team</a></li>-->
+                        <!--<li><a href="#pricingtable">Pricing</a></li>-->
+                        <!--<li><a href="#features">Features</a></li>-->
+                        <!--<li><a href="#products">Products</a></li>-->
+                        <!--<li><a href="#testimonials">Testimonials</a></li>-->
+                        <!--<li><a href="#contact">Contact</a></li>-->
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <!------- ABOUT US -------->
+    <section id="about">
+        <div class="container">
+            Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" была основана в 2008 году с целью развития, популяризации спорта, рукопашного боя и различных видов единоборств!
+            Миссия школы "БОЕВЫЕ ТРАДИЦИИ" -  оздоровления нации, приобщение  молодежи,  детей к здоровому способу жизни, воспитание волевых и сильных людей,
+            которые могут постоять за себя, свои семьи и свою родную землю.
+            Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" работает в развитии различных направлений рукопашного боя, таих как: армейский рукопашный бой, боевое самбо, греплинг, ММА.
+            Проводит обучение профиссиональным нвыкам сотрудников различных охранных агенств Украины.
+            Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" проводит тренировки пехотинцев воздушно морских сил США для посольства Соединенных Штатов Америки в Украине.
+        </div>
+    </section>
+
+    <!------- FOTO GALLERY -------->
+    <section id="gallery">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-6 col-md-3">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/2.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/3.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/6.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/8.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/9.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/10.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/11.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/12.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/13.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/14.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/15.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/18.jpg" alt="...">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!------- SCHEDULE -------->
+    <section id="schedule">
+        <div class="container">
+            Зал ул. Фрунзе,105 (стадион "Спартак"), Киев. Расписания занятий.
+            Зал ул. Здолбуновская 3А, Киев. Расписания занятий.
+        </div>
+    </section>
+
+    <!------- CONTACTS -------->
+    <section id="contacts">
+        <div class="container">
+            В настоящее время Школа Рукопашного Боя "Боевые традиции" организует и проводит регулярные занятия по адресам:
+            г. Киев, ул. Фрунзе, 105 (стадион "Спартак").
+            г. Киев ул. Здолбуновская 3А (Харьковский жилой массив).
+            (093) 704-07-98.
+        </div>
+    </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
