--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
 
@@ -14,10 +15,14 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/paper/bootstrap.min.css" rel="stylesheet">-->
 
+    <link href="css/custom.css" rel="stylesheet">
+
     <title>Fight School</title>
 
 </head>
 <body>
+
+    <img src="img/background/bkg_1.jpg" id="background"/>
 
     <!------- NAVIGATION -------->
     <header id="home" class="header">
@@ -30,8 +35,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <div class="navbar-brand">
-                        <img src="..." alt="...">
+                    <div class="navbar-brand" style="padding-top: 0">
+                        <img src="img/logo.jpg" alt="..." style="width: 100px;"> <!--TODO: resize + markup + add alt-->
                     </div>
                 </div>
                 <nav class="navbar-collapse collapse" role="navigation" id="bs-navbar-collapse">
@@ -57,12 +62,12 @@
     <!------- ABOUT US -------->
     <section id="about">
         <div class="container">
-            Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" была основана в 2008 году с целью развития, популяризации спорта, рукопашного боя и различных видов единоборств!
-            Миссия школы "БОЕВЫЕ ТРАДИЦИИ" -  оздоровления нации, приобщение  молодежи,  детей к здоровому способу жизни, воспитание волевых и сильных людей,
-            которые могут постоять за себя, свои семьи и свою родную землю.
-            Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" работает в развитии различных направлений рукопашного боя, таих как: армейский рукопашный бой, боевое самбо, греплинг, ММА.
-            Проводит обучение профиссиональным нвыкам сотрудников различных охранных агенств Украины.
-            Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" проводит тренировки пехотинцев воздушно морских сил США для посольства Соединенных Штатов Америки в Украине.
+            <h3>Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ"</h3>
+            <p>Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" была основана в 2008 году с целью развития, популяризации спорта, рукопашного боя и различных видов единоборств!</p>
+            <p>Миссия школы "БОЕВЫЕ ТРАДИЦИИ" -  оздоровления нации, приобщение  молодежи,  детей к здоровому способу жизни, воспитание волевых и сильных людей, которые могут постоять за себя, свои семьи и свою родную землю.</p>
+            <p>Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" работает в развитии различных направлений рукопашного боя, таих как: армейский рукопашный бой, боевое самбо, греплинг, ММА.</p>
+            <p>Проводит обучение профиссиональным нвыкам сотрудников различных охранных агенств Украины.</p>
+            <p>Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" проводит тренировки пехотинцев воздушно морских сил США для посольства Соединенных Штатов Америки в Украине.</p>
         </div>
     </section>
 
@@ -70,62 +75,63 @@
     <section id="gallery">
         <div class="container">
             <div class="row">
-                <div class="col-xs-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/2.jpg" alt="...">
-                    </a>
-                </div>
-                <div class="col-xs-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/3.jpg" alt="...">
-                    </a>
-                </div>
-                <div class="col-xs-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/6.jpg" alt="...">
-                    </a>
-                </div>
-                <div class="col-xs-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/8.jpg" alt="...">
-                    </a>
-                </div>
-                <div class="col-xs-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/9.jpg" alt="...">
-                    </a>
-                </div>
-                <div class="col-xs-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/10.jpg" alt="...">
-                    </a>
-                </div>
-                <div class="col-xs-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/11.jpg" alt="...">
-                    </a>
-                </div>
-                <div class="col-xs-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/12.jpg" alt="...">
-                    </a>
-                </div>
-                <div class="col-xs-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/13.jpg" alt="...">
-                    </a>
-                </div>
-                <div class="col-xs-6 col-md-3">
+                <div class="col-xs-6 col-md-4">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/14.jpg" alt="...">
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-3">
+                <div class="col-xs-6 col-md-4">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/6.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/8.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/2.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/3.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/9.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/10.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/11.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/12.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="#" class="thumbnail">
+                        <img src="img/foto/13.jpg" alt="...">
+                    </a>
+                </div>
+
+                <div class="col-xs-6 col-md-4">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/15.jpg" alt="...">
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-3">
+                <div class="col-xs-6 col-md-4">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/18.jpg" alt="...">
                     </a>
@@ -137,8 +143,63 @@
     <!------- SCHEDULE -------->
     <section id="schedule">
         <div class="container">
-            Зал ул. Фрунзе,105 (стадион "Спартак"), Киев. Расписания занятий.
-            Зал ул. Здолбуновская 3А, Киев. Расписания занятий.
+            <div class="row">
+                <h3>Расписаниe занятий</h3>
+                <table class="table table-bordered">
+                    <tr>
+                        <th colspan="100%" class="text-center">
+                            <h4>Киев ул. Фрунзе, 105 (стадион "Спартак")</h4>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>Группы</td>
+                        <td>Пн</td>
+                        <td>Вт</td>
+                        <td>Ср</td>
+                        <td>Чт</td>
+                        <td>Пт</td>
+                        <td>Сб</td>
+                    </tr>
+                    <tr>
+                        <td>???</td>
+                        <td>время</td>
+                        <td>время</td>
+                        <td>время</td>
+                        <td>время</td>
+                        <td>время</td>
+                        <td>время</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="row">
+                <table class="table table-bordered">
+                    <tr>
+                        <th colspan="100%" class="text-center">
+                            <h4>Киев ул. Здолбуновская, 3А</h4>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>Группы</td>
+                        <td>Пн</td>
+                        <td>Вт</td>
+                        <td>Ср</td>
+                        <td>Чт</td>
+                        <td>Пт</td>
+                        <td>Сб</td>
+                    </tr>
+                    <tr>
+                        <td>???</td>
+                        <td>время</td>
+                        <td>время</td>
+                        <td>время</td>
+                        <td>время</td>
+                        <td>время</td>
+                        <td>время</td>
+                    </tr>
+                </table>
+
+            </div>
         </div>
     </section>
 
@@ -146,16 +207,23 @@
     <section id="contacts">
         <div class="container">
             В настоящее время Школа Рукопашного Боя "Боевые традиции" организует и проводит регулярные занятия по адресам:
-            г. Киев, ул. Фрунзе, 105 (стадион "Спартак").
-            г. Киев ул. Здолбуновская 3А (Харьковский жилой массив).
-            (093) 704-07-98.
+            <ul>
+                <li>
+                    <h4>г. Киев, ул. Фрунзе, 105 (стадион "Спартак")</h4>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4269.525700231142!2d30.47019596512914!3d50.48439065874294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde930830bab%3A0x303fafde75801c70!2sKyrylivska+St%2C+105%2C+Kyiv!5e0!3m2!1sen!2sua!4v1479735341537" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </li>
+                <li>
+                    <h4>г. Киев ул. Здолбуновская 3А (Харьковский жилой массив)</h4>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.5789527055636!2d30.612318367409802!3d50.41284400401658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c5a04b5f795f%3A0xe38a18a4b120d9d2!2sZdolbunivska+St%2C+3%D0%90%2C+Kyiv!5e0!3m2!1sen!2sua!4v1479735396162" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </li>
+            </ul>
+            Телефон: (093) 704-07-98
         </div>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 
 </body>
 </html>
