Trainers + some markup + Isotope impl attempt

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!------- NAVIGATION -------->
     <header id="home" class="header">
-        <div id="main-nav" class="navbar navbar-inverse bs-docs-nav fixed" role="banner">
+        <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header responsive-logo">
                     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-navbar-collapse">
@@ -36,16 +36,16 @@
                         <span class="icon-bar"></span>
                     </button>
                     <div class="navbar-brand" style="padding-top: 0">
-                        <img src="img/logo.jpg" alt="..." style="width: 100px;"> <!--TODO: resize + markup + add alt-->
+                        <img src="img/logo_70.png" alt="..."> <!--TODO: resize + markup + add alt-->
                     </div>
                 </div>
                 <nav class="navbar-collapse collapse" role="navigation" id="bs-navbar-collapse">
                     <ul class="nav navbar-nav navbar-right responsive-nav main-nav-list">
-                        <li><a href="#home">Home</a></li>
-                        <li class=""><a href="#about">О нас</a></li>
-                        <li class=""><a href="#gallery">Фото</a></li>
-                        <li class=""><a href="#schedule">Расписание</a></li>
-                        <li class=""><a href="#contacts">Контакты</a></li>
+                        <!--<li><a href="#home">Home</a></li>-->
+                        <li><a href="#about">О нас</a></li>
+                        <li><a href="#gallery">Фото</a></li>
+                        <li><a href="#schedule">Расписание</a></li>
+                        <li><a href="#contacts">Контакты</a></li>
                         <!--<li class="current"><a href="#aboutus">About Us</a></li>-->
                         <!--<li class=""><a href="#team">Team</a></li>-->
                         <!--<li><a href="#pricingtable">Pricing</a></li>-->
@@ -68,70 +68,97 @@
             <p>Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" работает в развитии различных направлений рукопашного боя, таих как: армейский рукопашный бой, боевое самбо, греплинг, ММА.</p>
             <p>Проводит обучение профиссиональным нвыкам сотрудников различных охранных агенств Украины.</p>
             <p>Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" проводит тренировки пехотинцев воздушно морских сил США для посольства Соединенных Штатов Америки в Украине.</p>
+            <div class="text-center" style="margin: 50px 0 50px 0">
+                <h2>..... ТУТ ЕЩЕ ИНТЕРЕСТНЫЙ ТЕКСТ "О НАС" И/ИЛИ КРАСИВАЯ РАЗМЕТКА ПРЕДИДУЩЕЙ ЗАМАНУХИ ......</h2>
+            </div>
+        </div>
+    </section>
+
+    <!------- TRAINERS --------->
+    <section id="trainers">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h3>Инструктора</h3>
+                    <p>Инструктора школы рукопашного боя "БОЕВЫЕ ТРАДИЦИИ", имеют огромный практический опыт преподавания различным категориям населения, начиная от детей, заканчивая, профессиональными спортсменами и сотрудниками специальных подразделений. Для каждой группы людей у нас индивидуальный подход, методика, которая формируется в зависимости от тех целей и задач, которые ставят перед собой занимающиеся, а так же их физического психологического развития!</p>
+                </div>
+
+                <div class="col-sm-6 text-center">
+                    <h4>Юрчик Юрий Анатолиевич</h4>
+                    <img src="img/trainers/Yurchik.jpeg" alt="..." class="img-circle">
+                    <p>Основатель школы рукопашного боя "Боевые традиции"</p>
+                </div>
+
+                <div class="col-sm-6 text-center">
+                    <h4>Беспалый Валентин Евгениевич</h4>
+                    <img src="img/trainers/Valentin.jpg" alt="..." class="img-circle" style="height: 160px;">
+                    <p>Старший тренер школы рукопашного боя "Боевые традиции"</p>
+                </div>
+            </div>
         </div>
     </section>
 
     <!------- FOTO GALLERY -------->
     <section id="gallery">
         <div class="container">
-            <div class="row">
-                <div class="col-xs-6 col-md-4">
+            <div class="grid">
+                <div class="grid-item">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/14.jpg" alt="...">
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-4">
+                <div class="grid-item">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/6.jpg" alt="...">
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-4">
+                <div class="grid-item">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/8.jpg" alt="...">
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-4">
+                <div class="grid-item">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/2.jpg" alt="...">
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-4">
+                <div class="grid-item">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/3.jpg" alt="...">
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-4">
+                <div class="grid-item">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/9.jpg" alt="...">
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-4">
+                <div class="grid-item">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/10.jpg" alt="...">
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-4">
+                <div class="grid-item">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/11.jpg" alt="...">
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-4">
+                <div class="grid-item">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/12.jpg" alt="...">
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-4">
+                <div class="grid-item">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/13.jpg" alt="...">
                     </a>
                 </div>
 
-                <div class="col-xs-6 col-md-4">
+                <div class="grid-item">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/15.jpg" alt="...">
                     </a>
                 </div>
-                <div class="col-xs-6 col-md-4">
+                <div class="grid-item">
                     <a href="#" class="thumbnail">
                         <img src="img/foto/18.jpg" alt="...">
                     </a>
@@ -206,22 +233,24 @@
     <!------- CONTACTS -------->
     <section id="contacts">
         <div class="container">
-            В настоящее время Школа Рукопашного Боя "Боевые традиции" организует и проводит регулярные занятия по адресам:
+            <p>В настоящее время Школа Рукопашного Боя "Боевые традиции" организует и проводит регулярные занятия по адресам:</p>
+            <p>Телефон: (093) 704-07-98</p>
             <ul>
                 <li>
                     <h4>г. Киев, ул. Фрунзе, 105 (стадион "Спартак")</h4>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4269.525700231142!2d30.47019596512914!3d50.48439065874294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde930830bab%3A0x303fafde75801c70!2sKyrylivska+St%2C+105%2C+Kyiv!5e0!3m2!1sen!2sua!4v1479735341537" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4269.525700231142!2d30.47019596512914!3d50.48439065874294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde930830bab%3A0x303fafde75801c70!2sKyrylivska+St%2C+105%2C+Kyiv!5e0!3m2!1sen!2sua!4v1479735341537" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>-->
                 </li>
                 <li>
                     <h4>г. Киев ул. Здолбуновская 3А (Харьковский жилой массив)</h4>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.5789527055636!2d30.612318367409802!3d50.41284400401658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c5a04b5f795f%3A0xe38a18a4b120d9d2!2sZdolbunivska+St%2C+3%D0%90%2C+Kyiv!5e0!3m2!1sen!2sua!4v1479735396162" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.5789527055636!2d30.612318367409802!3d50.41284400401658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c5a04b5f795f%3A0xe38a18a4b120d9d2!2sZdolbunivska+St%2C+3%D0%90%2C+Kyiv!5e0!3m2!1sen!2sua!4v1479735396162" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>-->
                 </li>
             </ul>
-            Телефон: (093) 704-07-98
         </div>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
