--- a/index.html
+++ b/index.html
@@ -46,13 +46,6 @@
                         <li><a href="#gallery">Фото</a></li>
                         <li><a href="#schedule">Расписание</a></li>
                         <li><a href="#contacts">Контакты</a></li>
-                        <!--<li class="current"><a href="#aboutus">About Us</a></li>-->
-                        <!--<li class=""><a href="#team">Team</a></li>-->
-                        <!--<li><a href="#pricingtable">Pricing</a></li>-->
-                        <!--<li><a href="#features">Features</a></li>-->
-                        <!--<li><a href="#products">Products</a></li>-->
-                        <!--<li><a href="#testimonials">Testimonials</a></li>-->
-                        <!--<li><a href="#contact">Contact</a></li>-->
                     </ul>
                 </nav>
             </div>
@@ -62,12 +55,13 @@
     <!------- ABOUT US -------->
     <section id="about">
         <div class="container">
-            <h3>Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ"</h3>
+            <h3>Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ"</h3><br/><br/>
             <p>Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" была основана в 2008 году с целью развития, популяризации спорта, рукопашного боя и различных видов единоборств!</p>
             <p>Миссия школы "БОЕВЫЕ ТРАДИЦИИ" -  оздоровления нации, приобщение  молодежи,  детей к здоровому способу жизни, воспитание волевых и сильных людей, которые могут постоять за себя, свои семьи и свою родную землю.</p>
             <p>Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" работает в развитии различных направлений рукопашного боя, таих как: армейский рукопашный бой, боевое самбо, греплинг, ММА.</p>
             <p>Проводит обучение профиссиональным нвыкам сотрудников различных охранных агенств Украины.</p>
             <p>Школа рукопашного боя "БОЕВЫЕ ТРАДИЦИИ" проводит тренировки пехотинцев воздушно морских сил США для посольства Соединенных Штатов Америки в Украине.</p>
+            <br/>
             <div class="text-center" style="margin: 50px 0 50px 0">
                 <h2>..... ТУТ ЕЩЕ ИНТЕРЕСТНЫЙ ТЕКСТ "О НАС" И/ИЛИ КРАСИВАЯ РАЗМЕТКА ПРЕДИДУЩЕЙ ЗАМАНУХИ ......</h2>
             </div>
@@ -103,65 +97,41 @@
         <div class="container">
             <div class="grid">
                 <div class="grid-item">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/14.jpg" alt="...">
-                    </a>
+                    <a href="#" class="thumbnail"><img src="img/foto/14.jpg" alt="..."></a>
                 </div>
                 <div class="grid-item">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/6.jpg" alt="...">
-                    </a>
+                    <a href="#" class="thumbnail"><img src="img/foto/6.jpg" alt="..."></a>
                 </div>
                 <div class="grid-item">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/8.jpg" alt="...">
-                    </a>
+                    <a href="#" class="thumbnail"><img src="img/foto/8.jpg" alt="..."></a>
                 </div>
                 <div class="grid-item">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/2.jpg" alt="...">
-                    </a>
+                    <a href="#" class="thumbnail"><img src="img/foto/2.jpg" alt="..."></a>
                 </div>
                 <div class="grid-item">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/3.jpg" alt="...">
-                    </a>
+                    <a href="#" class="thumbnail"><img src="img/foto/3.jpg" alt="..."></a>
                 </div>
                 <div class="grid-item">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/9.jpg" alt="...">
-                    </a>
+                    <a href="#" class="thumbnail"><img src="img/foto/9.jpg" alt="..."></a>
                 </div>
                 <div class="grid-item">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/10.jpg" alt="...">
-                    </a>
+                    <a href="#" class="thumbnail"><img src="img/foto/10.jpg" alt="..."></a>
                 </div>
                 <div class="grid-item">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/11.jpg" alt="...">
-                    </a>
+                    <a href="#" class="thumbnail"><img src="img/foto/11.jpg" alt="..."></a>
                 </div>
                 <div class="grid-item">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/12.jpg" alt="...">
-                    </a>
+                    <a href="#" class="thumbnail"><img src="img/foto/12.jpg" alt="..."></a>
                 </div>
                 <div class="grid-item">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/13.jpg" alt="...">
-                    </a>
+                    <a href="#" class="thumbnail"><img src="img/foto/13.jpg" alt="..."></a>
                 </div>
 
                 <div class="grid-item">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/15.jpg" alt="...">
-                    </a>
+                    <a href="#" class="thumbnail"><img src="img/foto/15.jpg" alt="..."></a>
                 </div>
                 <div class="grid-item">
-                    <a href="#" class="thumbnail">
-                        <img src="img/foto/18.jpg" alt="...">
-                    </a>
+                    <a href="#" class="thumbnail"><img src="img/foto/18.jpg" alt="..."></a>
                 </div>
             </div>
         </div>
@@ -238,11 +208,11 @@
             <ul>
                 <li>
                     <h4>г. Киев, ул. Фрунзе, 105 (стадион "Спартак")</h4>
-                    <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4269.525700231142!2d30.47019596512914!3d50.48439065874294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde930830bab%3A0x303fafde75801c70!2sKyrylivska+St%2C+105%2C+Kyiv!5e0!3m2!1sen!2sua!4v1479735341537" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4269.525700231142!2d30.47019596512914!3d50.48439065874294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cde930830bab%3A0x303fafde75801c70!2sKyrylivska+St%2C+105%2C+Kyiv!5e0!3m2!1sen!2sua!4v1479735341537" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </li>
                 <li>
                     <h4>г. Киев ул. Здолбуновская 3А (Харьковский жилой массив)</h4>
-                    <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.5789527055636!2d30.612318367409802!3d50.41284400401658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c5a04b5f795f%3A0xe38a18a4b120d9d2!2sZdolbunivska+St%2C+3%D0%90%2C+Kyiv!5e0!3m2!1sen!2sua!4v1479735396162" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.5789527055636!2d30.612318367409802!3d50.41284400401658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c5a04b5f795f%3A0xe38a18a4b120d9d2!2sZdolbunivska+St%2C+3%D0%90%2C+Kyiv!5e0!3m2!1sen!2sua!4v1479735396162" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </li>
             </ul>
         </div>
@@ -251,8 +221,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+    <!--<script src="https://unpkg.com/masonry-layout/dist/masonry.pkgd.min.js"></script>-->
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <script src="js/custom.js"></script>
 
 </body>
 </html>
